--- a/index.html
+++ b/index.html
@@ -2875,5 +2875,230 @@ document.addEventListener('click', function(ev){
 })();
 </script>
 
+
+<script>
+(function(){
+  const CAL_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vSGjr-XdLSamHpGQfoORmLfntJbLd-UbFpD7NdMM14x2JdMhxOYHTWQBlhYCMDu0ZTy3AYS-1Y3q91Y/pub?gid=223681507&single=true&output=csv";
+  let PLAN = []; // {gestor, vendedor, semana, dia, cod?}
+  let DEBUG_ON = true;
+
+  function ensureDebug(){
+    if(!DEBUG_ON) return;
+    if(document.getElementById('rrDebug')) return;
+    const k = document.createElement('div');
+    k.id = 'rrDebug';
+    k.style.cssText = 'margin-top:6px;font-size:12px;opacity:.7';
+    const parent = document.querySelector('#screenResumen .card') || document.getElementById('screenResumen') || document.body;
+    parent.insertBefore(k, parent.children[1] || null);
+  }
+  function setDebug(msg){
+    if(!DEBUG_ON) return;
+    ensureDebug();
+    const k = document.getElementById('rrDebug');
+    if(k) k.textContent = msg;
+  }
+
+  function csvParse(text){
+    const rows = [];
+    let row = [], cur = '', q=false;
+    for(let i=0;i<text.length;i++){
+      const ch = text[i];
+      if(ch === '"'){
+        if(q && text[i+1] === '"'){ cur+='"'; i++; }
+        else q = !q;
+      } else if(ch === ',' && !q){
+        row.push(cur); cur='';
+      } else if((ch === '\n' || ch === '\r') && !q){
+        if(cur.length || row.length){ row.push(cur); rows.push(row); row=[]; cur=''; }
+      } else {
+        cur += ch;
+      }
+    }
+    if(cur.length || row.length){ row.push(cur); rows.push(row); }
+    if(rows.length===0) return [];
+    const header = rows.shift().map(h=>String(h||'').trim());
+    return rows.filter(r=>r.some(x=>String(x||'').trim()!=='')).map(r=>{
+      const o={};
+      for(let j=0;j<header.length;j++){ o[header[j]] = r[j]!==undefined ? r[j] : ''; }
+      return o;
+    });
+  }
+
+  function pick(o, names){
+    const keys = Object.keys(o);
+    for(const n of names){
+      if(n in o && o[n]!=null && o[n]!=='') return o[n];
+      const f = keys.find(k=>k.toLowerCase()===n.toLowerCase());
+      if(f) return o[f];
+    }
+    return '';
+  }
+  function norm(s){ return String(s||'').trim(); }
+  function normDia(d){ return String(d||'').normalize('NFD').replace(/\p{Diacritic}/gu,'').toLowerCase(); }
+
+  function mapCalRow(x){
+    return {
+      gestor: norm(pick(x,['gestor_servicio','Gestor','gestor','Gestor cartera'])) || 'NO ASIGNADO',
+      vendedor: norm(pick(x,['vendedor','Vendedor','VENDEDOR','VENDEDOR(A)'])),
+      semana: norm(pick(x,['SEMANA','Semana','N Semana','semana'])),
+      dia: norm(pick(x,['DIA','Día','Dia','día','dia'])),
+      cod: norm(pick(x,['Cod Empresa','CODIGO','Cod','Código','Codigo','cod','ID']))
+    };
+  }
+
+  async function loadPlan(){
+    setDebug('Cargando calendario...');
+    const res = await fetch(CAL_URL, {cache:'no-store'});
+    const txt = await res.text();
+    const rows = csvParse(txt).map(mapCalRow).filter(r=>r.semana && r.dia);
+    PLAN = rows;
+    setDebug(`Calendario cargado: ${PLAN.length} filas · cols detectadas: vendedor/gestor/semana/dia/cod`);
+  }
+
+  function ensureSemana14(){
+    const sel = document.getElementById('rrSemana');
+    if(!sel) return;
+    sel.innerHTML = '';
+    const first = document.createElement('option'); first.value=''; first.textContent='Todas'; sel.appendChild(first);
+    for(let w=1; w<=4; w++){ const o=document.createElement('option'); o.value=String(w); o.textContent=String(w); sel.appendChild(o); }
+  }
+
+  function populateFilters(){
+    const selVend = document.getElementById('rrVendedor');
+    const selGest = document.getElementById('rrGestor');
+    const unique = (arr)=>[...new Set(arr.filter(Boolean))].sort((a,b)=>a.localeCompare(b,'es',{numeric:true}));
+    const vend = unique(PLAN.map(r=>r.vendedor));
+    const gest = unique(PLAN.map(r=>r.gestor));
+    function fill(sel, arr, placeholder){
+      if(!sel) return;
+      sel.innerHTML = '';
+      const first = document.createElement('option'); first.value=''; first.textContent=placeholder; sel.appendChild(first);
+      arr.forEach(v=>{ const o=document.createElement('option'); o.value=v; o.textContent=v; sel.appendChild(o); });
+    }
+    fill(selVend, vend, 'Todos');
+    fill(selGest, gest, 'Todos');
+    setDebug(`Filtros: vendedores ${vend.length} · gestores ${gest.length}`);
+  }
+
+  function getCalls(){
+    let calls = [];
+    try{ calls = JSON.parse(localStorage.getItem('llamadas_records') || '[]'); }catch(_){}
+    if(window.STATE && Array.isArray(STATE.calls)) calls = calls.concat(STATE.calls);
+    return calls;
+  }
+
+  function renderResumen(){
+    const fSemana = (document.getElementById('rrSemana')||{}).value || '';
+    const fDia = (document.getElementById('rrDia')||{}).value || '';
+    const fVend = (document.getElementById('rrVendedor')||{}).value || '';
+    const fGest = (document.getElementById('rrGestor')||{}).value || '';
+
+    const base = PLAN.filter(x=>{
+      if(fSemana && String(x.semana)!==String(fSemana)) return false;
+      if(fDia && normDia(x.dia)!==normDia(fDia)) return false;
+      if(fVend && x.vendedor!==fVend) return false;
+      if(fGest && x.gestor!==fGest) return false;
+      return true;
+    });
+
+    // A realizar (plan) por gestor/semana/dia
+    const planMap = new Map();
+    for(const r of base){
+      const k = r.gestor+'||'+r.semana+'||'+normDia(r.dia);
+      const it = planMap.get(k) || {gestor:r.gestor, semana:r.semana, dia:r.dia, asignados:0};
+      it.asignados += 1;
+      planMap.set(k, it);
+    }
+
+    // Realizadas: agrupar por gestor/día usando fecha_hora de las llamadas
+    const doneMap = new Map();
+    for(const c of getCalls()){
+      const gestor = norm(c.gestor_servicio || c.gestor || '');
+      if(fGest && gestor !== fGest) continue;
+      const d = new Date(c.fecha_hora || c.fecha || c.timestamp || '');
+      if(isNaN(d)) continue;
+      const dia = d.toLocaleDateString('es-ES',{ weekday:'long' });
+      if(fDia && normDia(dia) !== normDia(fDia)) continue;
+      // nota: no hay semana de la llamada; se acumula contra todas las semanas filtradas del plan
+      const key = gestor+'||'+(fSemana||'')+'||'+normDia(dia);
+      const it = doneMap.get(key) || {gestor, semana:(fSemana||''), dia, realizadas:0, last:null};
+      it.realizadas += 1;
+      it.last = (!it.last || new Date(it.last) < d) ? d.toISOString() : it.last;
+      doneMap.set(key, it);
+    }
+
+    // Combinar claves del plan con realizadas (si hay semana seleccionada, las realizadas caen en esa semana; si no, en '')
+    const keys = new Set([...planMap.keys(), ...doneMap.keys()]);
+    const rows = [];
+    for(const k of keys){
+      const p = planMap.get(k) || {gestor:k.split('||')[0], semana:k.split('||')[1], dia:k.split('||')[2], asignados:0};
+      // Si no existe conteo de realizadas para esa clave exacta, intentar por (gestor + dia) sin semana
+      let d = doneMap.get(k);
+      if(!d){
+        const alt = p.gestor+'||'+''+'||'+normDia(p.dia||'');
+        d = doneMap.get(alt) || {realizadas:0, last:null};
+      }
+      const asign = p.asignados||0, hechas = d.realizadas||0;
+      const pct = asign ? (hechas/asign*100) : (hechas?100:0);
+      rows.push({gestor:p.gestor||'-', semana:p.semana||'-', dia:p.dia||'-', asignados:asign, realizadas:hechas, pct, last:d.last});
+    }
+    rows.sort((a,b)=> a.gestor.localeCompare(b.gestor,'es',{numeric:true}) ||
+                     String(a.semana).localeCompare(String(b.semana),'es',{numeric:true}) ||
+                     String(a.dia).localeCompare(String(b.dia),'es',{numeric:true}));
+
+    const tb = document.querySelector('#rrTbl tbody');
+    if(tb){
+      tb.innerHTML = rows.map(r=>'<tr>'
+        +'<td>'+ r.gestor +'</td>'
+        +'<td>'+ r.semana +'</td>'
+        +'<td>'+ r.dia +'</td>'
+        +'<td>'+ r.asignados +'</td>'
+        +'<td>'+ r.realizadas +'</td>'
+        +'<td>'+ r.pct.toFixed(1) +'%' +'</td>'
+        +'<td>'+ (r.last ? new Date(r.last).toLocaleString() : '-') +'</td>'
+      +'</tr>').join('');
+    }
+
+    let asign=0, hechas=0; rows.forEach(r=>{ asign+=r.asignados; hechas+=r.realizadas; });
+    const cov = asign ? (hechas/asign*100) : (hechas?100:0);
+    const a = document.getElementById('kpiAsignadas'); if(a) a.textContent = String(asign);
+    const h = document.getElementById('kpiHechas'); if(h) h.textContent = String(hechas);
+    const c = document.getElementById('kpiCobertura'); if(c) c.textContent = cov.toFixed(1)+'%';
+    setDebug(`Plan filtrado: ${base.length} filas · Grupos: ${rows.length}`);
+  }
+
+  async function bootResumen(){
+    try{
+      ensureDebug();
+      ensureSemana14();
+      if(!PLAN.length){ await loadPlan(); }
+      populateFilters();
+      ['rrSemana','rrDia','rrVendedor','rrGestor'].forEach(id=>{
+        const el = document.getElementById(id);
+        if(el && !el.__rrBound){ el.addEventListener('change', renderResumen); el.__rrBound=true; }
+      });
+      renderResumen();
+    }catch(e){
+      setDebug('Error en resumen: '+ (e && e.message ? e.message : e));
+    }
+  }
+
+  // Ejecutar cuando se muestre el reporte
+  document.addEventListener('click', (ev)=>{
+    const t = ev.target;
+    if(!t) return;
+    if(t.id==='btnRepResumen' || t.id==='btnReporteResumen'){
+      setTimeout(bootResumen, 0);
+    }
+  });
+  // Por si ya está en la pantalla
+  document.addEventListener('DOMContentLoaded', ()=>{
+    if(document.getElementById('screenResumen') && document.getElementById('screenResumen').style.display!=='none'){
+      setTimeout(bootResumen, 0);
+    }
+  });
+})();
+</script>
+
 </body>
 </html>
